got raquet to spawn and move with mouse fixing screen offset and mouse flickering

--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,8 @@ h1 {
 
 #gameBox {
   background-color: black;
+  height: 720px;
+  width: 1280px;
 }
 
 #startButton:hover {
